# hydropandas

./: .gitignore  .prospector.yaml  .readthedocs.yml  .travis.yml  LICENSE  pyproject.toml  pytest.ini  readme.md  requirements.travis.txt  requirements.txt  setup.py  version.py
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: bro.yml  ci.yml  knmi.yml  lizard.yml  lizard_rotterdam.yml  lizard_vitens.yml  matroos.yml  on_pr_dev.yml  on_pr_master.yml  python-publish.yml  waterconnect.yml  waterinfo.yml
.virtual_documents/examples/: 05_bronhouderportaal_bro.ipynb
data/: knmi_meteostation.json  knmi_neerslagstation.json
data/2019-Dino-test/Grondwatersamenstellingen_Put/: B58A0042.txt  B58A0061.txt
data/2019-Dino-test/Grondwaterstanden_Put/: B33F0080001_1.csv  B37A0112001_1.csv  B42B0003001_0.csv  B42B0003001_1.csv  B42B0003002_0.csv  B42B0003003_1.csv  B42B0003004_0.csv  B42B0003004_1.csv  B58A0092004_0.csv  B58A0092004_1.csv  B58A0102001_0.csv  B58A0102001_1.csv  B58A0212001_0.csv  B58A0212001_1.csv
data/2019-Dino-test/Peilschaal/: P58A0001.csv  P58A0002.csv  P58A0005.csv
data/2019-Dino-test/fieldlogger/: locations.csv
data/2019-Pystore-test/test_pystore/: metadata.json
docs/: conf.py  contribute.rst  examples.rst  getting_started.rst  index.rst  requirements.txt  user_guide.rst
docs/examples/: 00_hydropandas_objects.ipynb  00_hydropandas_objects.nblink  01_groundwater_observations.ipynb  01_groundwater_observations.nblink  02_knmi_observations.ipynb  02_knmi_observations.nblink  02_pastastore_from_observations.nblink  03_hydropandas_and_pastas.nblink  03_pastastore_from_observations.nblink  04_merging_observations.ipynb  04_merging_observations.nblink  05_bronhouderportaal_bro.ipynb  05_bronhouderportaal_bro.nblink  06_lizard.ipynb  06_lizard.nblink  07_fews.ipynb  07_fews.nblink  08_waterinfo.ipynb  08_waterinfo.nblink  09_water_connect.ipynb  09_waterconnect.nblink  10_borehole.ipynb  11_matroos.ipynb  index.rst  my_obs_collection.xlsx
docs/source/: hydropandas.extensions.rst  hydropandas.io.rst  modules.rst
examples/: 00_hydropandas_objects.ipynb  01_groundwater_observations.ipynb  02_knmi_observations.ipynb  03_hydropandas_and_pastas.ipynb  03_pastastore_from_observations.ipynb  04_interpolation.ipynb  04_merging_observations.ipynb  05_bronhouderportaal_bro.ipynb  06_lizard.ipynb  07_fews.ipynb  08_waterinfo.ipynb  09_water_connect.ipynb  Untitled.ipynb  groundwater_observations.ipynb  pastastore_from_observations.ipynb  voorbeeld_observations_pastastore.ipynb
examples/.virtual_documents/: 01_groundwater_observations.ipynb  05_bronhouderportaal_bro.ipynb
examples/data/: PB1_GMW.xml
examples/data/Grondwaterstanden_Put/: B33F0080001_0.csv
examples/data/bronhouderportaal-bro/: GROND5_B1-1.xml
hydropandas/: __init__.py  obs_collection.py  obs_collection.py.2e80b540c4fe4e9eefd381cfbe40d0cf.tmp  observation.py  rcparams.py  serialization.py  util.py  util.py.3298f08697b6c3dd67a74950e4a3370b.tmp  version.py
hydropandas/data/: fews_parameterid.py  fews_pid.py  knmi_meteostation.json  knmi_neerslagstation.json  matroos_params.json  update_knmi_meteostations.py  update_knmi_stations.py  update_matroos.py
hydropandas/extensions/: accessor.py  geo.py  gwobs.py  plots.py  stats.py
hydropandas/io/: bro.py  bronhouderportaal_bro.py  dino.py  fews.py  io_arctic.py  io_bro.py  io_dino.py  io_fews.py  io_fieldlogger.py  io_knmi.py  io_menyanthes.py  io_modflow.py  io_pastas.py  io_pystore.py  io_waterinfo.py  io_wiski.py  io_xml.py  knmi.py  lizard.py  matroos.py  menyanthes.py  modflow.py  pastas.py  soilinst.py  solinst.py  water_connect.py  waterinfo.py  wiski.py  wow.py
hydropandas/static/: js_collapse.html  style.css
observations/: __init__.py  accessor.py  fieldlogger.py  geo.py  gwobs.py  io_dino.py  io_knmi.py  io_menyanthes.py  io_pastas.py  io_pystore.py  io_wiski.py  io_xml.py  modflow.py  obs_collection.py  observation.py  plots.py  stats.py  util.py
observations/extensions/: accessor.py  geo.py  gwobs.py  plots.py  stats.py
observations/io/: __init__.py  io_arctic.py  io_dino.py  io_fieldlogger.py  io_knmi.py  io_menyanthes.py  io_modflow.py  io_pastas.py  io_postgres.py  io_pystore.py  io_waterinfo.py  io_wiski.py  io_xml.py
tests/: no_test_dino_wsdl.py  no_test_pystore.py  test_000_run_notebooks.py  test_001_to_from.py  test_002_obs_objects.py  test_003_calculations.py  test_004_gwobs.py  test_005_dino.py  test_005_io_dino.py  test_006_io_knmi.py  test_006_knmi.py  test_007_io_wiski.py  test_007_wiski.py  test_008_visualisation.py  test_009_fews.py  test_009_io_fews.py  test_010_run_notebooks.py  test_011_bro.py  test_011_io_bro.py  test_012_lizard.py  test_012_wow.py  test_013_lizard.py  test_013_solinst.py  test_014_solinst.py  test_015_knmi_api.py  test_015_waterconnect.py  test_016_matroos.py  test_016_waterinfo_api.py  test_101_bro_api.py  test_104_waterconnect_api.py  test_calculations.py  test_gwobs.py  test_io_dino.py  test_io_knmi.py  test_io_wiski.py  test_obs_objects.py  test_observations.py  test_to_from.py  test_visualisation.py
tests/api/: test_101_bro_api.py  test_102_knmi_api.py  test_103_lizard_api.py  test_103_lizard_api_vitens.py  test_104_waterconnect_api.py  test_105_waterinfo_api.py  test_106_lizard_api_rotterdam.py  test_107_matroos_api.py
tests/data/2019-FEWS-test/: test_wsvv_fews.xml
tests/data/2019-Pystore-test/: .gitignore
tests/data/2019-WISKI-test/: 8137_PBF.csv  Zwiepse Horstweg Barchem_1024_FT1_WNS9040_MomentaanO.csv
tests/data/2019-shapefiles/: poly.dbf  poly.shp  poly.shx
tests/data/2023-KNMI-test/: neerslaggeg_DE-BILT_550.txt  neerslaggeg_ESBEEK_831.txt  neerslaggeg_VILSTEREN_342.txt  precipitation_st_anthonis.txt  uurgeg_260_1991-2000.txt
tests/data/2023-MEN-test/: test.men
tests/data/2023-waterinfo-test/: 20200128_044.csv  20231023_017.csv
tests/data/2024-solinst-test/: WsNoo_dp366_BUB_20231222_slug1m.xle  example-10min-interval-via-laptop.xle
tests/data/waterinfo-test/: 20200128_045.csv
tests/notebooks/: test_000_run_notebooks.py
(+65 files in other folders)
